--- a/src/recipe.module.css
+++ b/src/recipe.module.css
@@ -13,5 +13,7 @@
 .image {
     width: 200px;
     height: 200px;
-    
+    border-radius: 40%;
+    margin-bottom: 10px;
+    border: 3px solid gray;
 }
